Fixed bug on mobile

--- a/code/style.css
+++ b/code/style.css
@@ -35,8 +35,8 @@ header h1 {
   justify-content: space-between;
 }
 
-.guy {
-  width: 50%;
+.guy img {
+  width: 100%;
   height: auto;
 }
 
@@ -153,7 +153,6 @@ footer p {
   }
 
   .guy {
-    transform: none;
     width: 40%;
   }
 
